Change Log:

**3/30/16**
- Fixed Spike Trap damage multipliers for 2.3 changes
- Lightning Rod now has 10 ticks (charges). Each tick does 88% damage. The delay between ticks is based on APS.
- Lightning also Arcs between traps for every other trap. This causes an additional 88% damage for every enemy between any two traps. 
- The # of lightning arcs is based on the # of traps. With 2 traps up, there will be one arc per tick. With 3 traps up, there will be 2 arcs per tick, etc... Added a new Multiplier "Traps" for the arcs.
- There does not appear to be any limit to the # of targets that can be hit by the arcs, so it arcs hit the primary target and all additional targets (we'll assume the traps are placed optimally).

**3/29/16**
- Added Skill-specific APS calculation to DPS/Breakpoint calculator
- Fixed several Spike Traps mechanics
   - Spike Traps now arm properly (3 seconds for Long Fuse, 1 second for Sticky Trap, 1.5 seconds for all others)
   - Spike Traps now rearm properly (0.5 seconds after first charge)
   - Correct # of charges for spike traps (1 for Long Fuse, Sticky Trap and Echoing Blast, 3 for all others)
   - Correct Max # of traps (6 for Custom Engineering, 3 otherwise)
   - Spike Traps now require time to be placed (based on breakpoint calculations) and will trigger Focus/Restraint spender buff
   - Spike Traps will always be deployed first, if less than maximum are currently active and if there is enough hatred to do so
   - Scatter rune now correctly deploys 3 traps at once
   
**2/4/16**
- Added base +4% CHC for Sharpshooter
- Added support for parsing Caldesann's Repair dexterity bonus from hero profile

**2/3/16**
- Added Broken Promises

**1/21/16**
- Fixed S6 damage (was in log but not included in calculations)
- Cooldown skills (Vengeance, RoV, FoK) now start immediately and Vengeance/Seethe no longer waits until hatred has been reduced before starting

**1/13/16**
- Added Karlei's Point 
- Added Sword of Ill Will 
- Added Endless Walk