@@ -1,5 +1,8 @@
 Change Log:
 
+**3/31/16**
+- Re-enabled Area Damage
+
 **3/30/16**
 - Fixed Spike Trap damage multipliers for 2.3 changes
 - Lightning Rod now has 10 ticks (charges). Each tick does 88% damage. The delay between ticks is based on APS.
